refactor main methods